[package]
name = "rust_flow"
version = "0.1.0"
edition = "2021"
authors = ["Christian <christian@example.com>"]
description = "A Rust coroutine and threading-based flow control system inspired by CsharpFlow"
license = "MIT"
readme = "README.md"
repository = "https://github.com/example/rust_flow"
keywords = ["async", "coroutines", "flow", "threads", "concurrency"]
categories = ["asynchronous", "concurrency"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"
proptest = "1.0"
serial_test = "3.0"

[[bench]]
name = "flow_benchmarks"
harness = false

[lib]
name = "rust_flow"
path = "src/lib.rs"

[[example]]
name = "game_loop"
path = "examples/game_loop.rs"

[[example]]
name = "async_tasks"
path = "examples/async_tasks.rs"
